# gighub_backend

./: Procfile  app.json  pyproject.toml  requirements.txt  storage_backends.py
backend/: permissions.py  settings.py  storage_backends.py  urls.py
backend/utils/: storage_backends.py
comments/: models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_remove_comment_liked_user.py  0003_comment_liked_user.py  0004_comment_bookmarked_user.py  0005_remove_comment_bookmarked_user_remove_comment_group.py  0006_comment_bookmarked_user.py  0007_remove_comment_bookmarked_user.py  0008_alter_comment_created_by.py  0009_alter_comment_post.py  0010_alter_comment_post.py  0011_alter_comment_post.py  0012_alter_comment_post.py  0013_alter_comment_post.py
groups/: admin.py  models.py  serializers.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_alter_group_profile_picture.py  0003_group_creator.py  0004_rename_creator_group_created_by.py  0005_alter_group_name.py  0006_alter_group_name.py  0007_alter_group_name.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_remove_post_bookmarked_user_post_bookmarked_user_and_more.py  0003_alter_post_bookmarked_user_alter_post_liked_user.py  0004_alter_post_bookmarked_user_alter_post_liked_user.py  0005_alter_post_bookmarked_user_alter_post_liked_user.py  0006_rename_user_post_created_by.py  0007_alter_post_created_by.py  0008_alter_post_group.py  (+4 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+8 files in other folders)
