[tool.poetry]
name = "gighub_backend"
version = "0.1.0"
description = ""
authors = ["Julie Park <juliepark242@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.8"
Django = "^4.0.4"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.1.0"
django-rest-auth = "^0.9.5"
dj-rest-auth = "^2.2.5"
django-cors-headers = "^3.12.0"
gunicorn = "^20.1.0"
whitenoise = "^6.1.0"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
python-dotenv = "^0.20.0"
django-environ = "^0.8.1"
boto3 = "^1.26.9"
django-storages = "^1.13.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.950"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
